--- a/examples/station_berg.tex
+++ b/examples/station_berg.tex
@@ -6,11 +6,15 @@
 \documentclass[tikz,border=2]{standalone}
 
 \usepackage{lmodern}
+\usepackage[prefix=]{xcolor-solarized}
 
-\input{../src/solarizedColors.tex}
-\input{../src/topologySymbols.tex}  % Order 1
-\input{../src/layoutSymbols_DE.tex} % Order 2 (important)
-\input{../src/vehicles.tex}
+\def\rootTrackschematic{../../tikz-trackschematic}
+\def\srcTrackschematic{\rootTrackschematic/src}
+\input{\srcTrackschematic/topology.tikz}
+\input{\srcTrackschematic/constructions.tikz}
+\input{\srcTrackschematic/vehicles.tikz}
+\input{\srcTrackschematic/trafficControl.tikz}   % Order 1
+\input{\srcTrackschematic/layoutSymbols_DE.tikz} % Order 2 (important)
 
 \begin{document}
   \begin{tikzpicture}[font=\sffamily]
@@ -22,10 +26,10 @@
   }
   {   % tracks
     \draw[line width=2pt] ( 1.5, 0) -- ++(37,0);
-    \draw[line width=2pt] (15  , 0) -- ++(1,1) -- ++(10,0) -- ++(1,-1);
-    \draw[line width=1pt] (11  ,-1) -- ++(2,0) -- ++(1,1);
-    \draw[line width=1pt] ( 9  , 1) -- ++(7,0);
-    \draw[line width=1pt] (14  , 1) -- ++(1,1) -- ++(10,0);
+    \draw[line width=2pt] (15  , 0) -- ++( 1,1) -- ++(10,0) -- ++(1,-1);
+    \draw[line width=1pt] (11  ,-1) -- ++( 2,0) -- ++( 1,1);
+    \draw[line width=1pt] ( 9  , 1) -- ++( 7,0);
+    \draw[line width=1pt] (14  , 1) -- ++( 1,1) -- ++(10,0);
     % track numbers
     \node[fill=white] at (11.7, 1) {12};
     \node[fill=white] at (11.7,-1) {10};
@@ -37,46 +41,46 @@
     \pic at (11,-1) {bufferstop_backward};
     \pic at (25, 2) {bufferstop_forward};
     % turnouts
-    \pic at (12.8,-1) {derailer_right_forward};
+    \pic  at (12.8,-1) {derailer_right_forward};
     \node at (12.7,-1.4) {\footnotesize Gs7};
-    \pic at (14,0) {turnout_left_backward};
-    \pic at (14,0) {fouling_point_left_backward};
+    \pic  at (14,0) {turnout_left_backward};
+    \pic  at (14,0) {fouling_point_left_backward};
     \node at (14,0.2) {\footnotesize W1};
-    \pic at (14,1) {turnout_left_forward};
-    \pic at (14,1) {fouling_point_left_forward};
+    \pic  at (14,1) {turnout_left_forward};
+    \pic  at (14,1) {fouling_point_left_forward};
     \node at (14,0.8) {\footnotesize W4};
-    \pic at (15,0) {turnout_left_forward};
-    \pic at (15,0) {fouling_point_left_forward};
+    \pic  at (15,0) {turnout_left_forward};
+    \pic  at (15,0) {fouling_point_left_forward};
     \node at (15,-0.2) {\footnotesize W2};
-    \pic at (16,1) {turnout_left_backward};
-    \pic at (16,1) {fouling_point_left_backward};
+    \pic  at (16,1) {turnout_left_backward};
+    \pic  at (16,1) {fouling_point_left_backward};
     \node at (16,1.2) {\footnotesize W3};
-    \pic at (27,0) {turnout_right_backward};
-    \pic at (27,0) {fouling_point_right_backward};
+    \pic  at (27,0) {turnout_right_backward};
+    \pic  at (27,0) {fouling_point_right_backward};
     \node at (27,-0.2) {\footnotesize W6};
     % platforms
     \pic at (19,0) {platform_left};
     \pic at (19,1) {platform_right};
   }
   {   % signals
-    \pic at ( 7,0) {distant_signal_forward};
-    \node[left] at (7,-0.4) {Va};
-    \pic at (10,0) {route_signal_forward};
-    \pic at (10,0) {distant_signal_forward};
-    \node[left] at (10,-0.4) {A};
-    \pic at (18,1) {route_signal_backward};
-    \node[right] at (18,1.4) {P2};
-    \pic at (18,0) {route_signal_backward};
-    \node[right] at (18,0.4) {P1};
-    \pic at (24,1) {route_signal_forward};
-    \node[left] at (24,0.6) {N2};
-    \pic at (24,0) {route_signal_forward};
-    \node[left] at (24,-0.4) {N1};
-    \pic at (30,0) {route_signal_backward};
-    \pic at (30,0) {distant_signal_backward};
-    \node[right] at (30,0.4) {F};
-    \pic at (33,0) {distant_signal_backward};
-    \node[right] at (33,0.4) {Vf};
+    \pic         at ( 7, 0  ) {distant_signal_forward};
+    \node[left]  at ( 7,-0.4) {Va};
+    \pic         at (10, 0  ) {route_signal_forward};
+    \pic         at (10, 0  ) {distant_signal_forward};
+    \node[left]  at (10,-0.4) {A};
+    \pic         at (18, 1  ) {route_signal_backward};
+    \node[right] at (18, 1.4) {P2};
+    \pic         at (18, 0  ) {route_signal_backward};
+    \node[right] at (18, 0.4) {P1};
+    \pic         at (24, 1  ) {route_signal_forward};
+    \node[left]  at (24, 0.6) {N2};
+    \pic         at (24, 0  ) {route_signal_forward};
+    \node[left]  at (24,-0.4) {N1};
+    \pic         at (30, 0  ) {route_signal_backward};
+    \pic         at (30, 0  ) {distant_signal_backward};
+    \node[right] at (30, 0.4) {F};
+    \pic         at (33, 0  ) {distant_signal_backward};
+    \node[right] at (33, 0.4) {Vf};
     % routes
     \pic at (20,0) {route_backward};
     \pic at (22,0) {route_forward};
@@ -102,14 +106,14 @@
     \pic at (30  , 0) {axle_counter_right};
   }
   {   % vehicles
-    \pic at ( 6,0) {train_moving_forward};
-    \node at (4,0) {\emph{RB}};
-    \pic at (21.5,2) {train=3};
-    \node at (23,2) {\emph{WG}};
-    \pic at (10.2,1) {train=1};
+    \pic  at ( 6  ,0) {train_moving_forward};
+    \node at ( 4  ,0) {\emph{RB}};
+    \pic  at (21.5,2) {train=3};
+    \node at (23  ,2) {\emph{WG}};
+    \pic  at (10.2,1) {train=1};
     \node at (10.7,1) {\emph{Tfz}};
-    \pic at (34,0) {train_moving_backward};
-    \node at (36,0) {\emph{IC}};
+    \pic  at (34  ,0) {train_moving_backward};
+    \node at (36  ,0) {\emph{IC}};
   }
   {   % hectometer posts
     \tikzset{every node/.style={left,base00,rotate=-90},every path/.style={base00,dashed}};
